add slider jquery ui

--- a/index.html
+++ b/index.html
@@ -21,16 +21,23 @@
 				<img src="img/logo.png" alt="img"/>
 				<div class="sliders">
 					<div class="slider-1-item">Сумма:</div>
-					<div id="content-slider-1"></div>
+					<div class="slider-1-content value-slider-1"></div>
 					<div class="slider"><div id="slider-1"></div></div>
 					<div class="limit-1">100</div>
 					<div class="limit-2">3000</div>
 
 					<div class="slider-2-item">Срок:</div>
-					<div id="content-slider-2"></div>
+					<div class="slider-2-content value-slider-2"></div>
 					<div class="slider"><div id="slider-2"></div></div>
 					<div class="limit-1">1</div>
 					<div class="limit-2">30</div>
+				</div>
+				<div class="checkbox-cnt">
+				<label>
+					<input class="checkbox" type="checkbox" name="checkbox">
+					<div class="checkbox-decor"></div>
+					<div class="label">только без процентов</div>
+				</label>
 				</div>
 			</div>
 
@@ -40,9 +47,9 @@
 				<header>
 					<nav>
 						<ul>
-							<li><a href="">Онлайн займы</a></li>
-							<li><a href="">Без залога</a></li>
-							<li class="li__blog"><a href="">Блог</a></li>
+							<li><a href="#">Онлайн займы</a></li>
+							<li><a href="#">Без залога</a></li>
+							<li class="li__blog"><a href="#">Блог</a></li>
 						</ul>
 					</nav>
 				</header><!-- </header> -->
@@ -142,10 +149,10 @@
 									<div class="col-30 first"><span class="ft-size--25">1600</span> грн</div>
 									<div class="col-40 str-2">
 										<div class="el-1">+</div>
-										<div class="el-2"><span class="ft-size--20">100</span> грн</div>
+										<div class="el-2"><span class="ft-size--20 value-slider-1"></span> грн</div>
 										<div class="el-3">=</div>
 									</div>
-									<div class="col-30 last str-2"><span class="ft-size--20">5</span> дней</div>
+									<div class="col-30 last str-2"><span class="ft-size--20 value-slider-2"></span> дней</div>
 								</div>
 
 								<div class="row section-2__str-3">
@@ -189,10 +196,10 @@
 									<div class="col-30 first"><span class="ft-size--25">1600</span> грн</div>
 									<div class="col-40 str-2">
 										<div class="el-1">+</div>
-										<div class="el-2"><span class="ft-size--20">100</span> грн</div>
+										<div class="el-2"><span class="ft-size--20 value-slider-1"></span> грн</div>
 										<div class="el-3">=</div>
 									</div>
-									<div class="col-30 last str-2"><span class="ft-size--20">5</span> дней</div>
+									<div class="col-30 last str-2"><span class="ft-size--20 value-slider-2"></span> дней</div>
 								</div>
 
 								<div class="row section-2__str-3">
@@ -215,7 +222,7 @@
 
 						</div><!--    section-2__block    -->
 
-						<div class="section-2__block">
+						<div class="section-2__block filter-checkbox">
 
 							<div class="section-2__block-title">
 								<div class="section-2__block-img">
@@ -236,10 +243,10 @@
 									<div class="col-30 first"><span class="ft-size--25">1600</span> грн</div>
 									<div class="col-40 str-2">
 										<div class="el-1">+</div>
-										<div class="el-2"><span class="ft-size--20">100</span> грн</div>
+										<div class="el-2"><span class="ft-size--20 value-slider-1"></span> грн</div>
 										<div class="el-3">=</div>
 									</div>
-									<div class="col-30 last str-2"><span class="ft-size--20">5</span> дней</div>
+									<div class="col-30 last str-2"><span class="ft-size--20 value-slider-2"></span> дней</div>
 								</div>
 
 								<div class="row section-2__str-3">
